--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -1,13 +1,28 @@
 body {
   background-color: black;
   text-align: center;
-  font-family: Verdana;
+  font-family: Verdana, sans-serif;
+  display: block;
 }
 h1 {
   color: white;
-  font-weight: 50px;
+  font-size: 50px;
+  font-weight: normal;
 }
 .download {
   color: aquamarine;
   font-size: 16px;
+}
+h2 {
+  font-weight: 300;
+  font-size: 42px;
+  color: white;
+}
+.description {
+  font-size: 21px;
+  color: gray;
+}
+.copy {
+  text-align: right;
+  color: gray;
 }
